--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -587,8 +587,8 @@ section{
 // //   background-color: #000;
 
     #vacayLogo{
-        width: 100%;
-        height: 100%;
+        width: 100%!important;
+        height: 100%!important;
         // width: 30vh;
 
     }
