--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -3,10 +3,10 @@
             <div class="row justify-content-center">
                 <h1>LET'S WORK TOGETHER</h1>
             </div>
-            <div class="row justify-content-center">
+            <div class="row col-12 justify-content-center">
                 <form>
                     <input class="col-5 float-left" type="text" name="name" id="name" placeholder="NAME"/>
-                    <input class="col-5 float-right" type="text" name="email" id="email" placeholder="EMAIL ADDRESS"/>
+                    <input class="col-5 float-right" type="text" name="email" id="email" placeholder="EMAIL"/>
                     <textarea class="col-12" placeholder="MESSAGE"></textarea>
                     <div class="row justify-content-center">
                         <input type="submit" id="submit" value="Submit">
